--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="service-list">
                 <div class="service-item">
                     <div class="service-item-img">
-                        <img src="/img/icon1.png" alt="">
+                       <a href="#">A</a> 
                     </div>
                     <div class="service-item-title">
                         Clean Typography
@@ -87,7 +87,7 @@
                 <!-- /.service-item -->
                 <div class="service-item">
                     <div class="service-item-img">
-                        <img src="/img/icon2.png" alt="">
+                        <a href="#"><i class="fa fa-code"></i></a> 
                     </div>
                     <div class="service-item-title">
                         Rock Solid Code
@@ -104,7 +104,7 @@
                 <!-- /.service-item -->
                 <div class="service-item">
                     <div class="service-item-img">
-                        <img src="/img/icon3.png" alt="">
+                        <a href="#"><i class="fa fa-life-ring"></i></a>
                     </div>
                     <div class="service-item-title">
                         Expert Support
@@ -234,31 +234,31 @@
             <!-- /.all-subtitle -->
             <div class="wrapper-example">
                 <div class="example-img">
-                    <a href="" class="example-img-link"><img src="img/example1.gif" alt="example work"></a>
+                    <a href="#" class="example-img-link"><img src="img/example1.gif" alt="example work"></a>
                 </div>
                 <div class="example-img">
-                    <a href="" class="example-img-link"><img src="img/example2.gif" alt="example work"></a>
+                    <a href="#" class="example-img-link"><img src="img/example2.gif" alt="example work"></a>
                 </div>
                 <div class="example-img">
-                    <a href="" class="example-img-link"><img src="img/example3.gif" alt="example work"></a>
+                    <a href="#" class="example-img-link"><img src="img/example3.gif" alt="example work"></a>
                 </div>
                 <div class="example-img">
-                    <a href="" class="example-img-link"><img src="img/example4.gif" alt="example work"></a>
+                    <a href="#" class="example-img-link"><img src="img/example4.gif" alt="example work"></a>
                 </div>
                 <div class="example-img">
-                    <a href="" class="example-img-link"><img src="img/example5.gif" alt="example work"></a>
+                    <a href="#" class="example-img-link"><img src="img/example5.gif" alt="example work"></a>
                 </div>
                 <div class="example-img">
-                    <a href="" class="example-img-link"><img src="img/example6.gif" alt="example work"></a>
+                    <a href="#" class="example-img-link"><img src="img/example6.gif" alt="example work"></a>
                 </div>
                 <div class="example-img">
-                    <a href="" class="example-img-link"><img src="img/example7.gif" alt="example work"></a>
+                    <a href="#" class="example-img-link"><img src="img/example7.gif" alt="example work"></a>
                 </div>
                 <div class="example-img">
-                    <a href="" class="example-img-link"><img src="img/example8.gif" alt="example work"></a>
+                    <a href="#" class="example-img-link"><img src="img/example8.gif" alt="example work"></a>
                 </div>
                 <div class="example-img">
-                    <a href="" class="example-img-link"><img src="img/example9.gif" alt="example work"></a>
+                    <a href="#" class="example-img-link"><img src="img/example9.gif" alt="example work"></a>
                 </div>
             </div>
             <!-- /.wrapper-example -->
@@ -389,7 +389,23 @@
     <!-- /.container -->
 </section>
 <!-- /.clients -->
-
+<section class="footer">
+    <div class="container">
+        <footer>
+            <div class="footer-social">
+                <ul class="footer-social-list">
+                    <li class="footer-social-list__item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li class="footer-social-list__item"><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li class="footer-social-list__item"><a href="#"><i class="fa fa-vk"></i></a></li>    
+                </ul>
+            </div>
+            <div class="footer-text">
+                © 2015 Startup, Designed by ShapedTheme
+            </div>
+        </footer>
+    </div>
+</section>
+<script src="https://use.fontawesome.com/0240f1b070.js"></script>
 <body>
 </body>
 
