--- a/index.html
+++ b/index.html
@@ -5,57 +5,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap"
         rel="stylesheet">
     <title>Startup</title>
 </head>
-<section class="header">
-    <header>
-        <div class="header-wrapper">
-            <div class="container">
-                <nav>
-                    <div class="logo">
-                        <a href="#" class="logo-link">Startup</a>
-                    </div>
-                    <!-- /.logo -->
-                    <div class="navbar">
-                        <ul class="navbar-list">
-                            <li class="navbar-list__item"><a href="#">Home</a></li>
-                            <li class="navbar-list__item"><a href="#">Services</a></li>
-                            <li class="navbar-list__item"><a href="#">About</a></li>
-                            <li class="navbar-list__item"><a href="#">Works</a></li>
-                            <li class="navbar-list__item"><a href="#">Blog</a></li>
-                            <li class="navbar-list__item"><a href="#">Clients</a></li>
-                            <li class="navbar-list__item"><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
-                    <!-- /.navbar -->
-                </nav>
-                <div class="wrapper-intro">
-                    <div class="intro-title">
-                        Welcome to STARTUP
-                    </div>
-                    <!-- /.intro-title -->
-                    <div class="intro-subtitle">
-                        Your Favourite Creative Agency Template
-                    </div>
-                    <!-- /.intro-subtitle -->
-                    <div class="intro-button">
-                        <a href="#" class="intro-button__link">
-                            Get Started
-                        </a>
-                    </div>
-                    <!-- /.intro-button -->
+<header>
+    <div class="header-wrapper">
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <a href="#">Startup</a>
                 </div>
-                <!-- /.wrapper-intro -->
+                <!-- /.logo -->
+                <div class="navbar">
+                    <ul class="navbar-list">
+                        <li class="navbar-list__item"><a href="#">Home</a></li>
+                        <li class="navbar-list__item"><a href="#">Services</a></li>
+                        <li class="navbar-list__item"><a href="#">About</a></li>
+                        <li class="navbar-list__item"><a href="#">Works</a></li>
+                        <li class="navbar-list__item"><a href="#">Blog</a></li>
+                        <li class="navbar-list__item"><a href="#">Clients</a></li>
+                        <li class="navbar-list__item"><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <!-- /.navbar -->
+            </nav>
+            <div class="wrapper-intro">
+                <div class="intro-title">
+                    Welcome to STARTUP
+                </div>
+                <!-- /.intro-title -->
+                <div class="intro-subtitle">
+                    Your Favourite Creative Agency Template
+                </div>
+                <!-- /.intro-subtitle -->
+                <div class="intro-button">
+                    <a href="#">
+                        Get Started
+                    </a>
+                </div>
+                <!-- /.intro-button -->
             </div>
-            <!-- /.container -->
+            <!-- /.wrapper-intro -->
         </div>
-        <!-- /.header-wrapper -->
-    </header>
-</section>
-<!-- /.header -->
+        <!-- /.container -->
+    </div>
+    <!-- /.header-wrapper -->
+</header>
 <section class="services">
     <div class="container">
         <div class="services-wrapper">
@@ -70,7 +68,7 @@
             <div class="service-list">
                 <div class="service-item">
                     <div class="service-item-img">
-                       <a href="#">A</a> 
+                        <a href="#">A</a>
                     </div>
                     <div class="service-item-title">
                         Clean Typography
@@ -87,7 +85,7 @@
                 <!-- /.service-item -->
                 <div class="service-item">
                     <div class="service-item-img">
-                        <a href="#"><i class="fa fa-code"></i></a> 
+                        <a href="#"><i class="fa fa-code"></i></a>
                     </div>
                     <div class="service-item-title">
                         Rock Solid Code
@@ -305,15 +303,18 @@
                     <div class="recent-post-title"><a href="#">Startup ideas needs to be funded</a></div>
                     <div class="recent-post-subtitle">By Khalil Uddin in Development </div>
                     <div class="recent-post-text">
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore et
-                        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
-                        erebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit am Lorem
-                        ipsum
-                        dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidulabore et
-                        dolore
-                        aliquyam erat, sed diam </p>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore
+                            et
+                            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                            et
+                            erebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit am
+                            Lorem
+                            ipsum
+                            dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidulabore et
+                            dolore
+                            aliquyam erat, sed diam </p>
                     </div>
-                    <!-- /.recent-post-text --> 
+                    <!-- /.recent-post-text -->
                     <div class="recent-post-button">
                         <a href="#">read more</a>
                     </div>
@@ -329,15 +330,18 @@
                     <div class="recent-post-title"><a href="#">Startup ideas needs to be funded</a></div>
                     <div class="recent-post-subtitle">By Khalil Uddin in Development </div>
                     <div class="recent-post-text">
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore et
-                        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
-                        erebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit am Lorem
-                        ipsum
-                        dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidulabore et
-                        dolore
-                        aliquyam erat, sed diam </p>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore
+                            et
+                            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                            et
+                            erebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit am
+                            Lorem
+                            ipsum
+                            dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidulabore et
+                            dolore
+                            aliquyam erat, sed diam </p>
                     </div>
-                    <!-- /.recent-post-text --> 
+                    <!-- /.recent-post-text -->
                     <div class="recent-post-button">
                         <a href="#">read more</a>
                     </div>
@@ -396,7 +400,7 @@
                 <ul class="footer-social-list">
                     <li class="footer-social-list__item"><a href="#"><i class="fa fa-twitter"></i></a></li>
                     <li class="footer-social-list__item"><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li class="footer-social-list__item"><a href="#"><i class="fa fa-vk"></i></a></li>    
+                    <li class="footer-social-list__item"><a href="#"><i class="fa fa-vk"></i></a></li>
                 </ul>
             </div>
             <div class="footer-text">
@@ -406,6 +410,7 @@
     </div>
 </section>
 <script src="https://use.fontawesome.com/0240f1b070.js"></script>
+
 <body>
 </body>
 
