hover menu team

--- a/index.html
+++ b/index.html
@@ -160,7 +160,16 @@
         <!-- /.about-text -->
         <div class="about-team">
             <div class="about-team-item">
-                <img src="img/team1.gif" alt="">
+                <div class="about-team-item__img">
+                    <img src="img/team1.gif" alt="">
+                    <div class="about-team-item__img-hover-menu">
+                        <ul>
+                            <li><a href=""><i class="fa fa-facebook-f"></i></a></li>
+                            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fa fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="about-team-item__name">
                     Md. Khalil Uddin
                 </div>
@@ -172,7 +181,16 @@
             </div>
             <!-- /.about-team-item -->
             <div class="about-team-item">
-                <img src="img/team2.gif" alt="">
+                <div class="about-team-item__img">
+                    <img src="img/team2.gif" alt="">
+                    <div class="about-team-item__img-hover-menu">
+                        <ul>
+                            <li><a href=""><i class="fa fa-facebook-f"></i></a></li>
+                            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fa fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="about-team-item__name">
                     Rubel Miah
                 </div>
@@ -184,7 +202,16 @@
             </div>
             <!-- /.about-team-item -->
             <div class="about-team-item">
-                <img src="img/team3.gif" alt="">
+                <div class="about-team-item__img">
+                    <img src="img/team3.gif" alt="">
+                    <div class="about-team-item__img-hover-menu">
+                        <ul>
+                            <li><a href=""><i class="fa fa-facebook-f"></i></a></li>
+                            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fa fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="about-team-item__name">
                     Shamim Mia
                 </div>
@@ -196,7 +223,16 @@
             </div>
             <!-- /.about-team-item -->
             <div class="about-team-item">
-                <img src="img/team4.gif" alt="">
+                <div class="about-team-item__img">
+                    <img src="img/team4.gif" alt="">
+                    <div class="about-team-item__img-hover-menu">
+                        <ul>
+                            <li><a href=""><i class="fa fa-facebook-f"></i></a></li>
+                            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fa fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="about-team-item__name">
                     John Doe
                 </div>
@@ -300,8 +336,13 @@
                     <img src="img/postimg1.gif" alt="post">
                 </div>
                 <div class="wrapper-content">
-                    <div class="recent-post-title"><a href="#">Startup ideas needs to be funded</a></div>
-                    <div class="recent-post-subtitle">By Khalil Uddin in Development </div>
+                    <div class="recent-post-wrapper">
+                        <div class="recent-post-date"><span>18</span><br>oct</div>
+                        <div class="recent-post-wrapper-title">
+                            <div class="recent-post-title"><a href="#">Startup ideas needs to be funded</a></div>
+                            <div class="recent-post-subtitle">By Khalil Uddin in Development </div>
+                        </div>
+                    </div>
                     <div class="recent-post-text">
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore
                             et
@@ -327,8 +368,13 @@
                     <img src="img/postimg2.gif" alt="post">
                 </div>
                 <div class="wrapper-content">
-                    <div class="recent-post-title"><a href="#">Startup ideas needs to be funded</a></div>
-                    <div class="recent-post-subtitle">By Khalil Uddin in Development </div>
+                    <div class="recent-post-wrapper">
+                        <div class="recent-post-date"><span>18</span><br>oct</div>
+                        <div class="recent-post-wrapper-title">
+                            <div class="recent-post-title"><a href="#">Startup ideas needs to be funded</a></div>
+                            <div class="recent-post-subtitle">By Khalil Uddin in Development </div>
+                        </div>
+                    </div>
                     <div class="recent-post-text">
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore
                             et
