--- a/index.html
+++ b/index.html
@@ -268,31 +268,130 @@
             <!-- /.all-subtitle -->
             <div class="wrapper-example">
                 <div class="example-img">
-                    <a href="#" class="example-img-link"><img src="img/example1.gif" alt="example work"></a>
+                    <img src="img/example1.gif" alt="example work">
+                    <div class="example-img-hover__menu">
+                        <div class="example-img-hover__menu-title">
+                            lorem ipsun
+                        </div>
+                        <div class="example-img-hover__menu-subtitle">
+                            Brending
+                        </div>
+                        <div class="example-img-hover__menu-link">
+                            <a href="#">Wiew</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="example-img">
-                    <a href="#" class="example-img-link"><img src="img/example2.gif" alt="example work"></a>
+                    <img src="img/example2.gif" alt="example work">
+                    <div class="example-img-hover__menu">
+                        <div class="example-img-hover__menu-title">
+                            lorem ipsun
+                        </div>
+                        <div class="example-img-hover__menu-subtitle">
+                            Brending
+                        </div>
+                        <div class="example-img-hover__menu-link">
+                            <a href="#">Wiew</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="example-img">
-                    <a href="#" class="example-img-link"><img src="img/example3.gif" alt="example work"></a>
+                    <img src="img/example3.gif" alt="example work">
+                    <div class="example-img-hover__menu">
+                        <div class="example-img-hover__menu-title">
+                            lorem ipsun
+                        </div>
+                        <div class="example-img-hover__menu-subtitle">
+                            Brending
+                        </div>
+                        <div class="example-img-hover__menu-link">
+                            <a href="#">Wiew</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="example-img">
-                    <a href="#" class="example-img-link"><img src="img/example4.gif" alt="example work"></a>
+                    <img src="img/example4.gif" alt="example work">
+                    <div class="example-img-hover__menu">
+                        <div class="example-img-hover__menu-title">
+                            lorem ipsun
+                        </div>
+                        <div class="example-img-hover__menu-subtitle">
+                            Brending
+                        </div>
+                        <div class="example-img-hover__menu-link">
+                            <a href="#">Wiew</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="example-img">
-                    <a href="#" class="example-img-link"><img src="img/example5.gif" alt="example work"></a>
+                    <img src="img/example5.gif" alt="example work">
+                    <div class="example-img-hover__menu">
+                        <div class="example-img-hover__menu-title">
+                            lorem ipsun
+                        </div>
+                        <div class="example-img-hover__menu-subtitle">
+                            Brending
+                        </div>
+                        <div class="example-img-hover__menu-link">
+                            <a href="#">Wiew</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="example-img">
-                    <a href="#" class="example-img-link"><img src="img/example6.gif" alt="example work"></a>
+                    <img src="img/example6.gif" alt="example work">
+                    <div class="example-img-hover__menu">
+                        <div class="example-img-hover__menu-title">
+                            lorem ipsun
+                        </div>
+                        <div class="example-img-hover__menu-subtitle">
+                            Brending
+                        </div>
+                        <div class="example-img-hover__menu-link">
+                            <a href="#">Wiew</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="example-img">
-                    <a href="#" class="example-img-link"><img src="img/example7.gif" alt="example work"></a>
+                    <img src="img/example7.gif" alt="example work">
+                    <div class="example-img-hover__menu">
+                        <div class="example-img-hover__menu-title">
+                            lorem ipsun
+                        </div>
+                        <div class="example-img-hover__menu-subtitle">
+                            Brending
+                        </div>
+                        <div class="example-img-hover__menu-link">
+                            <a href="#">Wiew</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="example-img">
-                    <a href="#" class="example-img-link"><img src="img/example8.gif" alt="example work"></a>
+                    <img src="img/example8.gif" alt="example work">
+                    <div class="example-img-hover__menu">
+                        <div class="example-img-hover__menu-title">
+                            lorem ipsun
+                        </div>
+                        <div class="example-img-hover__menu-subtitle">
+                            Brending
+                        </div>
+                        <div class="example-img-hover__menu-link">
+                            <a href="#">Wiew</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="example-img">
-                    <a href="#" class="example-img-link"><img src="img/example9.gif" alt="example work"></a>
+                    <img src="img/example9.gif" alt="example work">
+                    <div class="example-img-hover__menu">
+                        <div class="example-img-hover__menu-title">
+                            lorem ipsun
+                        </div>
+                        <div class="example-img-hover__menu-subtitle">
+                            Brending
+                        </div>
+                        <div class="example-img-hover__menu-link">
+                            <a href="#">Wiew</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- /.wrapper-example -->
@@ -424,15 +523,63 @@
         </div>
         <!-- /.clients-logo -->
         <div class="client-content">
-            <div class="client-content-text">
-                <p>Hvaing placeat facere possimus, omnis voluptas assumenda est,
-                    omnis dolor repellendus.<br> "Temporibus autem quibusdam et
-                    aut officiis debitis aut rerum"</p>
+            <div class="slider">
+                <div class="slider__item">
+                    <div class="client-content-text">
+                        <p>Hvaing placeat facere possimus, omnis voluptas assumenda est,
+                            omnis dolor repellendus.<br> "Temporibus autem quibusdam et
+                            aut officiis debitis aut rerum"</p>
+                    </div>
+                    <div class="client-content-by-line">
+                        John Doe, Google Inc.
+                    </div>
+                    <!-- /.client-content-by-line -->
+                </div>
+                <div class="slider__item">
+                    <div class="client-content-text">
+                        <p>Hvaing placeat facere possimus, omnis voluptas assumenda est,
+                            omnis dolor repellendus.<br> "Temporibus autem quibusdam et
+                            aut officiis debitis aut rerum"</p>
+                    </div>
+                    <div class="client-content-by-line">
+                        John Doe, Google Inc.
+                    </div>
+                    <!-- /.client-content-by-line -->
+                </div>
+                <div class="slider__item">
+                    <div class="client-content-text">
+                        <p>Hvaing placeat facere possimus, omnis voluptas assumenda est,
+                            omnis dolor repellendus.<br> "Temporibus autem quibusdam et
+                            aut officiis debitis aut rerum"</p>
+                    </div>
+                    <div class="client-content-by-line">
+                        John Doe, Google Inc.
+                    </div>
+                    <!-- /.client-content-by-line -->
+                </div>
+                <div class="slider__item">
+                    <div class="client-content-text">
+                        <p>Hvaing placeat facere possimus, omnis voluptas assumenda est,
+                            omnis dolor repellendus.<br> "Temporibus autem quibusdam et
+                            aut officiis debitis aut rerum"</p>
+                    </div>
+                    <div class="client-content-by-line">
+                        John Doe, Google Inc.
+                    </div>
+                    <!-- /.client-content-by-line -->
+                </div>
+                <div class="slider__item">
+                    <div class="client-content-text">
+                        <p>Hvaing placeat facere possimus, omnis voluptas assumenda est,
+                            omnis dolor repellendus.<br> "Temporibus autem quibusdam et
+                            aut officiis debitis aut rerum"</p>
+                    </div>
+                    <div class="client-content-by-line">
+                        John Doe, Google Inc.
+                    </div>
+                    <!-- /.client-content-by-line -->
+                </div>
             </div>
-            <div class="client-content-by-line">
-                John Doe, Google Inc.
-            </div>
-            <!-- /.client-content-by-line -->
         </div>
         <!-- /.client-content -->
     </div>
@@ -456,7 +603,9 @@
     </div>
 </section>
 <script src="https://use.fontawesome.com/0240f1b070.js"></script>
-
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="/js/slick.min.js"></script>
+<script src="/js/script.js"></script>
 <body>
 </body>
 
