--- a/index.html
+++ b/index.html
@@ -604,8 +604,8 @@
 </section>
 <script src="https://use.fontawesome.com/0240f1b070.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="/js/slick.min.js"></script>
-<script src="/js/script.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/script.js"></script>
 <body>
 </body>
 
