--- a/index.html
+++ b/index.html
@@ -505,19 +505,19 @@
         <div class="clients-logo">
             <ul class="clients-logo-list">
                 <li class="client-logo__item">
-                    <img src="/img/client-logo1.png" alt="client logo">
+                    <img src="img/client-logo1.png" alt="client logo">
                 </li>
                 <li class="client-logo__item">
-                    <img src="/img/client-logo2.png" alt="client logo">
+                    <img src="img/client-logo2.png" alt="client logo">
                 </li>
                 <li class="client-logo__item">
-                    <img src="/img/client-logo3.png" alt="client logo">
+                    <img src="img/client-logo3.png" alt="client logo">
                 </li>
                 <li class="client-logo__item">
-                    <img src="/img/client-logo4.png" alt="client logo">
+                    <img src="img/client-logo4.png" alt="client logo">
                 </li>
                 <li class="client-logo__item">
-                    <img src="/img/client-logo5.png" alt="client logo">
+                    <img src="img/client-logo5.png" alt="client logo">
                 </li>
             </ul>
         </div>
